--- a/mythos.css
+++ b/mythos.css
@@ -238,6 +238,14 @@ body {
     top: 50px;
 }
 
+.character-name {
+	position: absolute;
+    background-color: #00F;
+    left: 25%;
+    width: 50%;
+    padding: 5px 0;
+}
+
 .stage.combat-card {
 	height: 35px;
 	padding-top: 10px;
