--- a/mythos.css
+++ b/mythos.css
@@ -112,6 +112,7 @@ body {
 }
 
 .character-selection.section {
+	display: block;
 	margin-top: 60px;
 	background-color: white;
 }
@@ -125,9 +126,8 @@ body {
 }
 
 .combat.section {
-	display: block;
 	margin-top: 60px;
-	background-color: white;
+	background-color: transparent;
 }
 
 /* buttons */
@@ -174,27 +174,27 @@ body {
 /* Characters & Levels */
 
 /* Knight */
-.knight.character-card {
+#knight.character-card {
 	background-color: red;
 }
 /* Archer */
-.archer.character-card {
+#archer.character-card {
 	background-color: green;
 }
 /* Mage */
-.mage.character-card {
+#mage.character-card {
 	background-color: orange;
 }
 /* Cave */
-.cave.level-card {
+#cave.level-card {
 	background-color: black;
 }
 /* Forrest */
-.forrest.level-card {
+#forrest.level-card {
 	background-color: lime;
 }
 /* City */
-.city.level-card {
+#city.level-card {
 	background-color: yellow;
 }
 
@@ -208,7 +208,13 @@ body {
     padding: 0px;
     width: 100%;
     height: 100%;
+    background-color: transparent;
     overflow: hidden;  
+}
+
+.combat.textbox-prompt {
+	background-color: rgba(0,0,0,65);
+	color: white;
 }
 
 #user-character {
@@ -250,6 +256,7 @@ body {
 	height: 35px;
 	padding-top: 10px;
 	font-size: 20px;
+	background-color: transparent;
 }
 
 .character-image {
